[package]
name = "rust-sample-scraping"
version = "0.1.0"
authors = ["Yoshitaka Fujii <yoshiyoshifujii@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }